--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,18 @@ body {
   line-height: 1.5;
 }
 
+body.dark{
+  background-color: var(--bg-dark);
+  --black-100: var(--bg-dark);
+  --black-000: var(--bg-dark);
+  --main-to-dark-color: var(--bg-dark);
+  --dark-to-main-color: var(--main-color);
+  --shadow-black-100: var(--shadow-black-300);
+  --black-alpha-100: rgba(255, 255, 255, 0.05);
+  --black-900: #000000;
+  --black-400: #bbbbbb;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -123,6 +135,16 @@ ul {
   }
 }
 
+@keyframes zoomInOut_01 {
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
 .effect-wrap .effect {
   position: absolute;
   z-index: -1;
@@ -192,6 +214,31 @@ ul {
 }
 
 /*----------------
+ Preloader --------*/
+
+ .preloader{
+   position: fixed;
+   left: 0;
+   top: 0;
+   height: 100%;
+   width: 100%;
+   z-index: 2100;
+   background-color: var(--main-to-dark-color);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+
+ .preloader span{
+   display: block;
+   height: 60px;
+   width: 60px;
+   background-color: var(--dark-to-main-color);
+   border-radius: 50%;
+   animation: zoomInOut_01 1s ease infinite;
+ }
+
+/*----------------
  Navbar --------*/
 
 .navbar {
@@ -254,6 +301,8 @@ Home Section --------*/
   background-color: var(--main-to-dark-color);
   border-radius: 0 0 200px 0;
   position: relative;
+  z-index: 1;
+  overflow-x: hidden;
 }
 
 .home-text h1 {
@@ -1060,6 +1109,29 @@ Footer ---------*/
   font-weight: 300;
   margin: 50px 0 0;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+/*---------------------
+Toggle Theme - light and dark mode ---------*/
+
+.toggle-theme{
+position: fixed;
+right: 0;
+top: calc(50% - 20px);
+height: 40px;
+width: 40px;
+background-color: var(--dark-to-main-color);
+z-index: 1200;
+color: #ffffff;
+cursor: pointer;
+border-radius: 50%;
+box-shadow: var(--shadow-black-300);
+font-size: 16px;
+text-align: center;
+}
+
+.toggle-theme i{
+  line-height: 40px;
 }
 
 /*---------------------
